# ZERO

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  train.py
configs/: lichess-bot.yml.example
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/history/: page.tsx
frontend/app/play/: page.tsx
frontend/app/watch/: page.tsx
frontend/components/: Button.tsx  CapturedPieces.tsx  ChessBoard.tsx  Clock.tsx  EvaluationBar.tsx  GameEndModal.tsx  MoveHistory.tsx  PromotionDialog.tsx  StatusBanner.tsx
frontend/lib/: audio.ts  chess.ts  engine.ts
scripts/: install.sh  perft.py  train_loop.sh
tests/: test_audit_fixes.py  test_audit_fixes_v1287.py  test_board.py  test_elo.py  test_encoding.py  test_encoding_mcts_uci.py  test_hunter_rewards.py  test_mcts.py  test_model_optional.py  test_performance.py  test_replay.py  test_self_play.py  test_training_optional.py
zero_chess/: __init__.py  arena.py  board.py  checkpoint.py  checkpointing.py  constants.py  elo.py  ema.py  encoding.py  ewc.py  lichess.py  mcts.py  model.py  move.py  pgn.py  replay.py  self_play.py  targets.py  training.py  uci.py  websocket_server.py  zobrist.py
